--- a/website/docs/cli/commands/refresh.mdx
+++ b/website/docs/cli/commands/refresh.mdx
@@ -1,7 +1,7 @@
 ---
 page_title: 'Command: refresh'
 description: |-
-  The `terraform refresh` command reads the current settings from all managed
+  The `terraform refresh` command [deprecated] reads the current settings from all managed
   remote objects and updates the Terraform state to match.
 ---
 
